--- a/Front-end1/style.css
+++ b/Front-end1/style.css
@@ -178,4 +178,19 @@
     font-weight: bold;
     text-align: center;
   }
+  .btn-clear {
+    background-color: #7c3aed;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  .btn-clear:hover {
+    background-color: #ccc;
+  }
+  .btn-clear:active {
+    transform: scale(0.95); 
+  }  
   
